--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,10 @@
   "authors": [
     "Cameron Will <cwill747@gmail.com>"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cwill747/angulartics-coremetrics"
+  },
   "license": "Apache-2.0",
   "ignore": [
     "**/.*",
